--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,9 @@
 [submodule "protected/extensions/YiiBootstrap"]
 	path = protected/extensions/YiiBootstrap
 	url = git://github.com/VisualAppeal/YiiBootstrap.git
-[submodule "extensions/YiiMongoDbSuite"]
+[submodule "protected/extensions/YiiMongoDbSuite"]
 	path = protected/extensions/YiiMongoDbSuite
 	url = git://github.com/canni/YiiMongoDbSuite.git
+[submodule "protected/extensions/TwitterExtension4Yii"]
+	path = protected/extensions/TwitterExtension4Yii
+	url = git://github.com/ielshareef/TwitterExtension4Yii.git
