--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -7,3 +7,10 @@ class_name: CodeGuy
 modules:
     enabled:
         - CodeHelper
+        - Db
+    config:
+        Db:
+            dsn: 'mysql:host=localhost;dbname=konani_unit'
+            user:
+            password:
+            dump: tests/_data/dump.sql
