--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 #  - mysql -e 'CREATE DATABASE yiitest;';
 
 script:
-  - cd apps/basic && php vendor/bin/codecept run
+  - t php vendor/bin/codecept run
 
 #after_script:
 #  - php vendor/bin/coveralls
