--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -20,7 +20,7 @@ modules:
     config:
         Db:
             dsn: 'mysql:host=localhost;dbname=konani_acceptance'
-            user:
+            user: root
             password:
             dump: tests/_data/dump.sql
         PhpBrowser:
