--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,7 @@ install:
   - php -S localhost:3000 -t web &
 
 before_script:
-  - mysql -e 'CREATE DATABASE konani_acceptance;';
-  - mysql -e 'CREATE DATABASE konani_functional;';
-  - mysql -e 'CREATE DATABASE konani_unit;';
+  - mysql -e 'CREATE DATABASE konani_test;';
 
 script:
   - php vendor/bin/codecept run
