--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -17,7 +17,7 @@ modules:
         Yii2:
             configFile: 'tests/functional/_config.php'
         Db:
-            dsn: 'mysql:host=localhost;dbname=konani_functional'
+            dsn: 'mysql:host=localhost;dbname=konani_test'
             user: root
             password:
             dump: tests/_data/dump.sql
